sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: not found: value v
    v=getValue(i)
    ^AlgInsertionSort:7: error: not found: value v
    	if((i-j-1)>v){
                   ^