sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var l=getValueCount()
  for (i <- 1 to l-1){
    v=getValue(i)
  	for (j <- 1 to i){
    	if((i-j-1)>v){
    		copy(i-j,i-j+1)
    	}
    }
   }
}